# SyrfusGameEngine

./: .gitmodules  BuildDebug.bat  BuildDebug.sh  CMakeLists.txt  README.md
BuildScripts/: Build.sh  CleanBuild.bat
SyrfusGameEngine/: CMakeLists.txt
SyrfusGameEngine/dependencies/glad/: CMakeLists.txt
SyrfusGameEngine/dependencies/glad/include/glad/: gl.h
SyrfusGameEngine/dependencies/glad/src/: gl.c
SyrfusGameEngine/include/: SyrfusGameEngine.hpp
SyrfusGameEngine/src/: SyrfusGameEngineConfig.hpp.in
SyrfusGameEngine/src/Core/: Application.hpp  Engine.cpp  Engine.hpp
SyrfusGameEngine/src/Core/Logging/: Logger.cpp  Logger.hpp
SyrfusGameEngine/src/DataStructures/: IterableStack.hpp
SyrfusTestApp/src/: SyrfusTestApp.cpp
examples/SyrfusTestApp/: CMakeLists.txt
examples/SyrfusTestApp/src/: SyrfusTestApp.cpp  SyrfusTestAppConfig.hpp.in
include/: CMakeLists.txt  SyrfusGameEngine.hpp
scripts/: Build.bat  Build.sh  CleanBuild.bat  CleanBuild.sh  CompileDebug.bat  CompileDebug.sh  CompileRelease.bat  CompileRelease.sh
src/: CMakeLists.txt  SyrfusGameEngineConfig.h.in  main.cpp
src/Core/: Application.hpp  Engine.cpp  Engine.hpp
src/Core/Input/: Event.hpp  KeyboardEvents.hpp  MouseEvents.hpp  WindowEvents.hpp
src/Core/Windowing/: Window.hpp  WindowManager.cpp  WindowManager.hpp
src/Core/WindowsPlatform/: WindowsLookupTables.hpp  WindowsWindow.cpp  WindowsWindow.hpp
